[package]
name = "second_law"
version = "0.3.1"
authors = ["Nathan Ross <nross.se@gmail.com>"]
description = "A binary integration test swiss army knife, compatible with Stainless"
homepage = "https://github.com/nathanross/second_law"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
tempdir = "0.3"
